--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-router/fs-routes": "7.1.3",
     "@react-router/node": "7.1.3",
     "@react-router/serve": "7.1.3",
+    "@tanstack/react-table": "^8.20.6",
     "@types/react-syntax-highlighter": "^15.5.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
