--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     ".react-router/types/**/*"
   ],
   "compilerOptions": {
+    "verbatimModuleSyntax": true,
     "lib": [
       "DOM",
       "DOM.Iterable",
