--- a/package.json
+++ b/package.json
@@ -9,18 +9,17 @@
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc",
-    "check": "pnpm run lint && pnpm run typecheck"
+    "check": "pnpm run lint && pnpm run typecheck",
+    "knip": "knip"
   },
   "dependencies": {
     "@effect/platform": "^0.75.1",
     "@effect/platform-node": "^0.71.1",
     "@radix-ui/react-select": "^2.1.5",
-    "@react-router/fs-routes": "7.1.3",
     "@react-router/node": "7.1.3",
     "@react-router/serve": "7.1.3",
     "@tanstack/react-table": "^8.20.6",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "effect": "3.12.7",
     "lucide-react": "^0.474.0",
@@ -32,9 +31,6 @@
     "react-markdown": "^9.0.3",
     "react-router": "^7.1.3",
     "react-syntax-highlighter": "^15.6.1",
-    "rehype-highlight": "^7.0.2",
-    "rehype-raw": "^7.0.0",
-    "remix-utils": "^8.1.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -43,12 +39,13 @@
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.19.0",
     "@react-router/dev": "^7.1.3",
+    "@types/node": "^22.13.2",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^8.24.0",
     "@typescript-eslint/parser": "^8.24.0",
     "autoprefixer": "^10.4.20",
-    "dprint": "0.48.0",
+    "dprint": "0.49.0",
     "eslint": "^9.19.0",
     "eslint-import-resolver-typescript": "^3.7.0",
     "eslint-plugin-import": "^2.31.0",
@@ -56,9 +53,11 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "5.1.0",
     "globals": "^15.14.0",
+    "knip": "^5.44.1",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.7.3",
+    "typescript-eslint": "^8.24.0",
     "vite": "6.0.11",
     "vite-tsconfig-paths": "5.1.4"
   },
