--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc",
     "check": "pnpm run lint && pnpm run typecheck",
-    "knip": "knip"
+    "knip": "knip",
+    "prepare": "husky"
   },
   "dependencies": {
     "@effect/platform": "^0.75.1",
@@ -23,13 +24,13 @@
     "clsx": "^2.1.1",
     "effect": "3.13.1",
     "lucide-react": "^0.474.0",
-    "ollama": "^0.5.13",
-    "react": "^18.2.0",
+    "ollama": "0.5.13",
+    "react": "18.2.0",
     "react-datepicker": "^7.6.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.4.0",
+    "react-dom": "18.2.0",
+    "react-icons": "5.4.0",
     "react-markdown": "^9.0.3",
-    "react-router": "^7.1.3",
+    "react-router": "7.2.0",
     "react-syntax-highlighter": "^15.6.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
