--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "clsx": "^2.1.1",
     "effect": "3.13.1",
+    "husky": "^9.1.7",
     "lucide-react": "^0.474.0",
     "ollama": "0.5.13",
     "react": "18.2.0",
