--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@effect/platform": "^0.75.1",
     "@effect/platform-node": "^0.71.1",
     "@radix-ui/react-select": "^2.1.5",
-    "@react-router/node": "7.1.3",
-    "@react-router/serve": "7.1.3",
+    "@react-router/node": "7.2.0",
+    "@react-router/serve": "7.2.0",
     "@tanstack/react-table": "^8.20.6",
     "@types/react-syntax-highlighter": "^15.5.13",
     "clsx": "^2.1.1",
@@ -40,7 +40,7 @@
     "@eslint/compat": "^1.2.5",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.19.0",
-    "@react-router/dev": "^7.1.3",
+    "@react-router/dev": "7.2.0",
     "@types/node": "^22.13.2",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
