--- a/package.json
+++ b/package.json
@@ -65,5 +65,9 @@
   "engines": {
     "node": ">=22"
   },
-  "packageManager": "pnpm@9.15.4"
+  "packageManager": "pnpm@9.15.4",
+  "volta": {
+    "node": "23.10.0",
+    "pnpm": "10.6.5"
+  }
 }
