--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
     "autoprefixer": "^10.4.21",
-    "dprint": "0.49.0",
+    "dprint": "0.49.1",
     "eslint": "^9.22.0",
     "eslint-import-resolver-typescript": "^3.8.4",
     "eslint-plugin-import": "^2.31.0",
@@ -56,10 +56,11 @@
     "eslint-plugin-react-hooks": "5.1.0",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
+    "rolldown": "1.0.0-beta.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.26.1",
-    "vite": "6.0.11",
+    "vite": "6.2.22",
     "vite-tsconfig-paths": "5.1.4"
   },
   "engines": {
