--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@effect/eslint-plugin": "^0.3.0",
     "@effect/platform": "^0.80.1",
-    "@effect/platform-node": "^0.76.1",
+    "@effect/platform-node": "^0.76.3",
     "@radix-ui/react-select": "^2.1.6",
     "@react-router/node": "7.4.0",
     "@react-router/serve": "7.4.0",
@@ -24,42 +25,42 @@
     "clsx": "^2.1.1",
     "effect": "3.14.1",
     "husky": "^9.1.7",
-    "lucide-react": "^0.474.0",
+    "lucide-react": "^0.483.0",
     "ollama": "0.5.14",
     "react": "18.2.0",
-    "react-datepicker": "^7.6.0",
-    "react-dom": "18.2.0",
-    "react-icons": "5.4.0",
-    "react-markdown": "^9.1.0",
-    "react-router": "7.2.0",
+    "react-datepicker": "^8.2.1",
+    "react-dom": "18.3.1",
+    "react-icons": "5.5.0",
+    "react-markdown": "^10.1.0",
+    "react-router": "7.4.0",
     "react-syntax-highlighter": "^15.6.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.7",
-    "@eslint/eslintrc": "^3.3.0",
-    "@eslint/js": "^9.22.0",
-    "@react-router/dev": "7.2.0",
-    "@types/node": "^22.13.10",
-    "@types/react": "^18.3.18",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.23.0",
+    "@react-router/dev": "7.4.0",
+    "@types/node": "^22.13.12",
+    "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.5",
-    "@typescript-eslint/eslint-plugin": "^8.26.1",
-    "@typescript-eslint/parser": "^8.26.1",
+    "@typescript-eslint/eslint-plugin": "^8.27.0",
+    "@typescript-eslint/parser": "^8.27.0",
     "autoprefixer": "^10.4.21",
     "dprint": "0.49.1",
-    "eslint": "^9.22.0",
-    "eslint-import-resolver-typescript": "^3.8.4",
+    "eslint": "^9.23.0",
+    "eslint-import-resolver-typescript": "^4.2.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "5.1.0",
-    "globals": "^15.15.0",
+    "eslint-plugin-react-hooks": "5.2.0",
+    "globals": "^16.0.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.15",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.26.1",
-    "vite": "6.2.2",
+    "typescript-eslint": "^8.27.0",
+    "vite": "6.2.3",
     "vite-tsconfig-paths": "5.1.4"
   },
   "engines": {
