--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@effect/eslint-plugin": "^0.3.0",
+    "@effect/language-service": "^0.4.0",
     "@effect/platform": "^0.80.1",
     "@effect/platform-node": "^0.76.3",
     "@radix-ui/react-select": "^2.1.6",
