--- a/package.json
+++ b/package.json
@@ -15,41 +15,42 @@
   },
   "dependencies": {
     "@effect/eslint-plugin": "^0.3.2",
-    "@effect/platform": "^0.80.21",
-    "@effect/platform-node": "^0.76.22",
+    "@effect/platform": "^0.85.2",
+    "@effect/platform-node": "^0.86.4",
     "@radix-ui/react-select": "^2.2.5",
-    "@react-router/node": "7.4.0",
-    "@react-router/serve": "7.4.0",
+    "@react-router/node": "7.6.2",
+    "@react-router/serve": "7.6.2",
+    "@tailwindcss/vite": "^4.1.10",
     "@tanstack/react-table": "^8.21.3",
     "@types/react-syntax-highlighter": "^15.5.13",
     "clsx": "^2.1.1",
-    "effect": "3.14.1",
+    "effect": "3.16.8",
     "husky": "^9.1.7",
-    "lucide-react": "^0.483.0",
-    "ollama": "0.5.14",
-    "react": "18.2.0",
+    "lucide-react": "^0.520.0",
+    "ollama": "0.5.16",
+    "react": "18.3.1",
     "react-datepicker": "^8.4.0",
     "react-dom": "18.3.1",
     "react-icons": "5.5.0",
     "react-markdown": "^10.1.0",
-    "react-router": "7.4.0",
+    "react-router": "7.6.2",
     "react-syntax-highlighter": "^15.6.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@effect/language-service": "^0.4.0",
+    "@effect/language-service": "^0.21.6",
     "@eslint/compat": "^1.3.0",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.29.0",
-    "@react-router/dev": "7.4.0",
-    "@types/node": "^22.15.32",
+    "@react-router/dev": "7.6.2",
+    "@types/node": "^24.0.3",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
     "autoprefixer": "^10.4.21",
-    "dprint": "0.49.1",
+    "dprint": "0.50.0",
     "eslint": "^9.29.0",
     "eslint-import-resolver-typescript": "^4.4.3",
     "eslint-plugin-import": "^2.32.0",
@@ -57,11 +58,10 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "5.2.0",
     "globals": "^16.2.0",
-    "postcss": "^8.5.6",
     "tailwindcss": "^4.1.10",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.34.1",
-    "vite": "6.2.3",
+    "vite": "6.3.5",
     "vite-tsconfig-paths": "5.1.4"
   },
   "engines": {
