--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@effect/eslint-plugin": "^0.3.2",
     "@effect/platform": "^0.85.2",
     "@effect/platform-node": "^0.86.4",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@react-router/node": "7.6.2",
     "@react-router/serve": "7.6.2",
