--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@effect/eslint-plugin": "^0.3.2",
+    "@effect/experimental": "^0.52.2",
     "@effect/platform": "^0.85.2",
     "@effect/platform-node": "^0.86.4",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -69,9 +70,9 @@
   "engines": {
     "node": ">=22"
   },
-  "packageManager": "pnpm@10.6.5",
+  "packageManager": "pnpm@10.13.1",
   "volta": {
     "node": "23.10.0",
-    "pnpm": "10.6.5"
+    "pnpm": "10.13.1"
   }
 }
