Updates logout logging for better readability
Enhances the logging of logout operations by stringifying the result before logging it. This improves the readability of log entries.

Additionally, modifies the CSS class for the logout button to include hover:cursor-pointer, which provides a clearer visual cue when hovering over the button.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,11 @@
     "plugins": [
       {
         "name": "@effect/language-service",
+        "barrelImportPackages": [
+          "effect/FastCheck"
+        ],
         "namespaceImportPackages": [
-          "effect"
+          "effect/Stream"
         ],
       }
     ],
