--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "effect": "3.16.16",
     "husky": "^9.1.7",
     "lucide-react": "^0.520.0",
+    "luxon": "^3.7.1",
     "ollama": "0.5.16",
     "react": "18.3.1",
+    "react-big-calendar": "^1.19.4",
     "react-datepicker": "^8.4.0",
     "react-dom": "18.3.1",
     "react-icons": "5.5.0",
@@ -48,8 +50,10 @@
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.29.0",
     "@react-router/dev": "7.7.0",
+    "@types/luxon": "^3.6.2",
     "@types/node": "^24.0.3",
     "@types/react": "^18.3.23",
+    "@types/react-big-calendar": "^1.16.2",
     "@types/react-dom": "^18.3.7",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
