--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@effect/platform": "^0.88.2",
     "@effect/platform-node": "^0.91.0",
     "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@react-router/node": "7.7.0",
