--- a/package.json
+++ b/package.json
@@ -24,16 +24,21 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-radio-group": "^1.3.7",
     "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@react-router/node": "7.7.0",
     "@react-router/serve": "7.7.0",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-table": "^8.21.3",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "effect": "3.17.1",
     "husky": "^9.1.7",
     "lucide-react": "^0.520.0",
     "luxon": "^3.7.1",
+    "motion": "^12.23.12",
     "ollama": "0.5.16",
     "react": "18.3.1",
     "react-big-calendar": "^1.19.4",
