--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@effect/experimental": "^0.54.0",
     "@effect/platform": "^0.90.0",
     "@effect/platform-node": "^0.94.0",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
