--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@effect/experimental": "^0.54.0",
     "@effect/platform": "^0.90.0",
     "@effect/platform-node": "^0.94.0",
+    "@icons-pack/react-simple-icons": "^13.7.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -28,15 +29,18 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@react-router/node": "7.7.0",
     "@react-router/serve": "7.7.0",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-table": "^8.21.3",
-    "@types/react-syntax-highlighter": "^15.5.13",
+    "ai": "^5.0.22",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "effect": "3.17.1",
+    "harden-react-markdown": "^1.0.4",
     "husky": "^9.1.7",
+    "katex": "^0.16.22",
     "lucide-react": "^0.520.0",
     "luxon": "^3.7.1",
     "motion": "^12.23.12",
@@ -49,8 +53,12 @@
     "react-markdown": "^10.1.0",
     "react-router": "7.7.0",
     "react-syntax-highlighter": "^15.6.1",
+    "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "use-stick-to-bottom": "^1.1.1"
   },
   "devDependencies": {
     "@effect/language-service": "^0.28.3",
@@ -63,6 +71,7 @@
     "@types/react": "^18.3.23",
     "@types/react-big-calendar": "^1.16.2",
     "@types/react-dom": "^18.3.7",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
     "autoprefixer": "^10.4.21",
