--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "5.2.0",
     "globals": "^16.3.0",
+    "shadcn": "^3.0.0",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
