feat: update reimbursement messages for clarity and improve VSCode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,11 @@
 {
+  "comments.lineComment": "#",
+  "[plaintext]": {
+    "editor.comments.insertSpace": true
+  },
+  "files.associations": {
+    "*.txt": "shellscript"
+  },
   "cSpell.words": [
     "Benque",
     "clsx",
