--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@effect/experimental": "^0.54.0",
     "@effect/platform": "^0.90.0",
     "@effect/platform-node": "^0.94.0",
+    "@googlemaps/places": "^2.2.0",
     "@icons-pack/react-simple-icons": "^13.7.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -93,7 +94,7 @@
   "engines": {
     "node": ">=23"
   },
-  "packageManager": "pnpm@10.18.3",
+  "packageManager": "pnpm@10.21.0",
   "volta": {
     "node": "23.10.0",
     "pnpm": "10.18.3"
